package model;

public interface CalculateMark {
    public double calculateMark();
}
